All things are not Done in this
Trigger are remianing in this for now

--- a/aigreentick/package.json
+++ b/aigreentick/package.json
@@ -9,6 +9,7 @@
     "validate": "zapier validate"
   },
   "dependencies": {
+    "libphonenumber-js": "^1.12.16",
     "zapier-platform-core": "17.7.0"
   },
   "devDependencies": {
